[package]
name = "sven"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.8"
log = "0.4.27"
quick-xml = { version = "0.38.1", features = [ "serialize" ] }
reqwest = { version = "0.12.23", features = [ "blocking" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
